# MIDAS

./: CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  anom.cpp  anom.hpp  argparse.hpp  auc.py  demo.sh  edgehash.cpp  edgehash.hpp  main.cpp  nodehash.cpp  nodehash.hpp  pyproject.toml  setup.py
CPU/: CMakeLists.txt  EdgeHash.hpp  EdgeList.hpp  FilteringCore.hpp  NodeHash.hpp  NodeList.hpp  NormalCore.hpp  Option.h  RejectCore.hpp  RelationalCore.h  RelationalCore.hpp
data/: yellow-small.data
data/DARPA/: darpa_shape.txt
doc/Experiment/MIDAS/Normal/Time,AUC/: DARPA.csv  DDoS.Balanced.csv  DDoS.Unbalanced.csv
doc/Experiment/MIDAS/Relational/Time,AUC/: DARPA.csv  DDoS.Balanced.csv  DDoS.Unbalanced.csv
doc/Experiment/RejectMIDAS/Normal/AccurateCount/Threshold,AUC/: DARPA.csv  DDoS.Balanced.csv
doc/Experiment/RejectMIDAS/Normal/Factor/AUC/: DARPA.csv  DDoS.Balanced.csv
doc/Experiment/RejectMIDAS/Normal/Scalability/: #Bucket,Time.csv  #Edge,Time.csv
doc/Experiment/RejectMIDAS/Normal/Threshold/AUC/: DARPA.csv  DDoS.Balanced.csv  DDoS.Unbalanced.csv
doc/Experiment/RejectMIDAS/Normal/Threshold/Time/: DARPA.csv  DDoS.Balanced.csv
doc/Experiment/RejectMIDAS/Relational/AccurateCount/Threshold,AUC/: DARPA.csv  DDoS.Balanced.csv
doc/Experiment/RejectMIDAS/Relational/Factor/AUC/: DARPA.csv  DDoS.Balanced.csv
doc/Experiment/RejectMIDAS/Relational/Scalability/: #Bucket,Time.csv  #Edge,Time.csv
doc/Experiment/RejectMIDAS/Relational/Threshold/AUC/: DARPA.csv  DDoS.Balanced.csv  DDoS.Unbalanced.csv
doc/Experiment/RejectMIDAS/Relational/Threshold/Time/: DARPA.csv  DDoS.Balanced.csv
doc/Experiment/SedanSpot/Time,AUC/: DARPA.csv  DDoS.Balanced.csv  DDoS.Unbalanced.csv
doc/Manuscript/: Reference.bib  Scratch.docx  main.aux  main.bbl  main.blg  main.out  main.tex
doc/Manuscript/script/: BucketScalability.py  EdgeScalability.py  ROC.py  ResultDistribution.py  ThresholdScalability.py  TimeAUC.py
example/: AttackExperiment.cpp  Demo.cpp  Experiment.cpp  Reproducible.cpp  TwitterExperiment.cpp
python/: MIDASWrapper.cpp
src/: CMakeLists.txt  CountMinSketch.hpp  EdgeHash.hpp  FilteringCore.hpp  NodeHash.hpp  NormalCore.hpp  RelationalCore.hpp
temp/: README.md
util/: AUROC.hpp  BucketScalability.py  DeleteTempFile.py  EdgeScalability.py  EvaluateScore.py  PlotAnomalousEvent.py  PreprocessData.py  ReproduceROC.py  ResultDistribution.py  ThresholdScalability.py
